--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -100,5 +100,8 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
+    <string name="title_activity_scrolling">ScrollingActivity</string>
+    <string name="title_activity_detail_food">DetailFoodActivity</string>
+    <string name="section_format">Hello World from section: %1$d</string>
 
 </resources>
