--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -104,4 +104,7 @@
     <string name="title_activity_detail_food">DetailFoodActivity</string>
     <string name="section_format">Hello World from section: %1$d</string>
 
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
 </resources>
