--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="hello">Sample Android Design Support Library App</string>
-
+    <string name="action_about">About</string>
     <string name="Home">Home</string>
     <string name="Favourites">Favourites</string>
     <string name="Shopping">Shopping List</string>
@@ -106,5 +106,6 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_food_today">FoodToday</string>
 
 </resources>
